# scoredraft

./: .gitignore  README.md  canvas_tile_bg.py  pyproject.toml  sdcanvas.py  sdcanvas_svg.py  sdcanvas_tile_bg.py  sdwindow.py  test_kivy.py  test_tk.py
backgrounds/: attribution.md
sdcanvas/: STYLES.py  __init__.py  _area.py  _bg.py  _draw.py  _uses.py  sdcanvas.py
sdcanvas/mixins/: __init__.py  _uses.py  area.py  bg.py  draw.py  svg.py  view.py
sdcanvas/states/: __init__.py  _base.py  draw.py  drawline.py  idle.py  scroll.py
states/: __init__.py  _base.py  draw.py  drawline.py  drawpoint.py  drawsubcanvas.py  idle.py  scroll.py
